Fixing contrast errors

--- a/Tipstaff/Content/PagedList.css
+++ b/Tipstaff/Content/PagedList.css
@@ -29,7 +29,7 @@
 	vertical-align:middle;
 	line-height:35px;
 	height:35px;
-	color:#3399ff !important;
+	color:#0070e0 !important;
 }
 .PagedList-pager ul li.PageNonSelectable, 
 .PagedList-pager ul li.PageSelectable > a:hover,
