--- a/Tipstaff/Content/Site.css
+++ b/Tipstaff/Content/Site.css
@@ -1,13 +1,13 @@
 ﻿block.buttonAsLink {
-	font-family:Arial, Helvetica, Verdana, sans-serif;
-	font-size:0.8em;
-	color:#3399ff;
-	background-color:Window;
-	padding:			3px 0;
-	border-width:		0;  
-	cursor:				pointer;
-	text-align:			left;
-	text-decoration:	underline;
+    font-family: Arial, Helvetica, Verdana, sans-serif;
+    font-size: 0.8em;
+    color: #0070e0;
+    background-color: Window;
+    padding: 3px 0;
+    border-width: 0;
+    cursor: pointer;
+    text-align: left;
+    text-decoration: underline;
 }
 body {
 	font-family:Arial, Helvetica, Verdana, sans-serif;
@@ -19,7 +19,7 @@ img
 }
 A
 {
-	color: #3399ff;
+	color: #0070e0;
 }
 .logo {
 	display:inline;
@@ -80,7 +80,7 @@ th
 }
 a.createButton
 {
-	color:#3399ff ! important;
+	color:#0070e0 ! important;
 	text-decoration:none;
 }
 a.createButton:hover
@@ -213,7 +213,7 @@ footer,
     display:block;
     clear:both;
     background-color: #fff;
-    color: #999;
+    color: black;
     padding: 10px 0;
     text-align: center;
     line-height: normal;
@@ -295,7 +295,7 @@ TH input.sortButton
     margin:0px !important;
     background-color:transparent;
     cursor:pointer;
-	color:#3399ff ! important;
+	color:#0070e0 ! important;
 	text-decoration:none;
     vertical-align:middle;
     font-size:1em !important;
@@ -323,6 +323,44 @@ TH input.sortButton.desc
 TH input[sortButton] {
     width: auto;
 }
+
+TD input.sortButton {
+    float: left;
+    display: block;
+    border: none !important;
+    padding: 0px !important;
+    margin: 0px !important;
+    background-color: transparent;
+    cursor: pointer;
+    color: #0070e0 !important;
+    text-decoration: none;
+    vertical-align: middle;
+    font-size: 1em !important;
+    background-image: none;
+    text-align: left;
+    padding: 0 !important;
+    padding-left: 0.25em !important;
+    padding-right: 17px !important;
+    width: 100%; /* IE table-cell margin fix */
+    overflow: visible !important;
+}
+
+    TD input.sortButton:hover {
+        color: Green !important;
+    }
+
+    TD input.sortButton.asc {
+        background: url('../Images/bullet_arrow_up.png') no-repeat right;
+    }
+
+    TD input.sortButton.desc {
+        background: url('../Images/bullet_arrow_down.png') no-repeat right;
+    }
+
+TD input[sortButton] {
+    width: auto;
+}
+
 /* Styles for validation helpers
 -----------------------------------------------------------*/
 .field-validation-error {
@@ -441,7 +479,7 @@ ul.recordMenu-tabs >li >a
     margin:0px !important;
     background-color:transparent;
     cursor:pointer;
-	color:#3399ff ! important;
+	color:#0070e0 ! important;
 	text-decoration:none;
     vertical-align:middle;
     font-size:1em !important;
