--- a/Tipstaff/Content/newPagedListButtons.css
+++ b/Tipstaff/Content/newPagedListButtons.css
@@ -6,7 +6,7 @@
     margin:0px !important;
     background-color:transparent;
     cursor:pointer;
-	color:#3399ff ! important;
+	color:#0070e0 ! important;
 	text-decoration:none;
     vertical-align:middle;
     font-size:1em !important;
@@ -27,7 +27,7 @@
 INPUT[disabled][type='submit']
 {   
     color: #FFFFFF !important;
-    background-color:#3399ff;
+    background-color:#0070e0;
 	cursor:default;
 }
 input.pageButton.text, button.pageButton.text
@@ -43,23 +43,23 @@ button.pageButton.text.number[disabled][type='submit']
 input.pageButton:hover,button.pageButton:hover
 {
 	color:#ffffff ! important;
-    background-color:#3399ff;
+    background-color:#0070e0;
 }
 input.pageButton.text:hover,button.pageButton.text:hover
 {
 	color:#000000 ! important;
-    background-color:#3399ff;
+    background-color:#0070e0;
 }
 
 input.pageButton.img ,button.pageButton.img 
 {
     border:none !important;
 	text-indent: -9000px; text-transform: capitalize;
-    background-color:#3399ff;
+    background-color:#0070e0;
 }
 input.pageButton.img:hover,button.pageButton.img:hover
 {
-    background-color:#3399ff;
+    background-color:#0070e0;
 }
 input.pageButton.undo:hover,button.pageButton.undo:hover
 {
